# tech-spotlight

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_filename.txt
datasets/: tech_list.txt  test_list.txt
tech_spotlight/: scraper.py  tech_term_search.py
test-raw-data/: sample_write.csv
tests/: test_scraper.py  test_tech_term_scraper.py
