[project]
name = "tech_spotlight"
version = "1.0.2"
description = "The goal of this project is to search through relevant job postings and find the frequency of technologies associated with those jobs."
authors = [
    {name = "Benjamin", email = "benj.james.carter@gmail.com"},
]
dependencies = [
    "requests>=2.28.1",
    "bs4>=0.0.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]

[tool.pdm]

[tool.pdm.scripts]
lint = "pre-commit run -a"
test = "pytest"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
